# marvell-dpdk-sdk

./: .clang-format  .mailmap  MAINTAINERS  meson.build
drivers/dma/cnxk/: cnxk_dma_event_dp.h  cnxk_dmadev.c  cnxk_dmadev.h  cnxk_dmadev_fp.c  meson.build  version.map
drivers/ml/cnxk/: cn10k_mldev.c  cn10k_mldev.h  cn10k_mldev_ops.c  cn10k_mldev_ops.h  cnxk_mldev.c  cnxk_mldev.h  meson.build  version.map
drivers/net/octeon_ep/: cnxk_ep_rx.c  cnxk_ep_rx.h  cnxk_ep_rx_avx.c  cnxk_ep_rx_sse.c  cnxk_ep_tx.c  cnxk_ep_vf.c  cnxk_ep_vf.h  meson.build  otx2_ep_vf.c  otx2_ep_vf.h  otx_ep_common.h  otx_ep_ethdev.c  otx_ep_irq.c  otx_ep_irq.h  otx_ep_mbox.c  otx_ep_mbox.h  otx_ep_rxtx.c  otx_ep_rxtx.h  otx_ep_vf.c  otx_ep_vf.h
marvell-ci/test/cnxk-tests/: meson.build
marvell-ci/test/cnxk-tests/bphy_irq/: meson.build
marvell-ci/test/cnxk-tests/cman_test/: cnxk_cman_test.sh
marvell-ci/test/cnxk-tests/common/: meson.build
marvell-ci/test/cnxk-tests/common/pcap/: meson.build  pcap.env
marvell-ci/test/cnxk-tests/common/scapy/: meson.build
marvell-ci/test/cnxk-tests/common/testpmd/: common.env  lbk.env  meson.build
marvell-ci/test/cnxk-tests/cpt_t106_mode/: cpt_t106_mode_test.sh  meson.build
marvell-ci/test/cnxk-tests/crypto_autotest/: crypto_autotest.sh  meson.build
marvell-ci/test/cnxk-tests/crypto_perf/: README_standalone.txt  cnxk_crypto_perf.sh  crypto_perf_host.sh  crypto_perf_standalone.sh  crypto_perf_target.sh  crypto_test_standalone.sh  meson.build
marvell-ci/test/cnxk-tests/crypto_perf/ref_numbers/cn10k/: rclk2000_sclk1000.106xx  rclk2500_sclk1100.106xx
marvell-ci/test/cnxk-tests/crypto_perf/ref_numbers/cn9k/: rclk2200_sclk1100_cptclk1000.96xx
marvell-ci/test/cnxk-tests/dpdk_test/: dpdk_test.sh  meson.build
marvell-ci/test/cnxk-tests/event_inline_ipsec_autotest/: event_inline_ipsec_autotest.sh  meson.build
marvell-ci/test/cnxk-tests/event_perf/: cnxk_event_perf.sh  cnxk_event_perf_gen.sh  meson.build
marvell-ci/test/cnxk-tests/event_perf/ref_numbers/: cn106xx_rclk2000_sclk1000.csv  cn106xx_rclk2500_sclk1100.csv  cn96xx_rclk2200_sclk1100.csv
marvell-ci/test/cnxk-tests/extbuf/: README  cnxk_extbuf.sh  cnxk_indirectbuf.sh  extbuf.c  meson.build
marvell-ci/test/cnxk-tests/flow_aging/: cnxk_flow_aging.sh  meson.build
marvell-ci/test/cnxk-tests/flow_ctrl/: cnxk_fc_test.sh
marvell-ci/test/cnxk-tests/flow_perf/: meson.build
marvell-ci/test/cnxk-tests/flow_regression/: cnxk_flow_regression.sh
marvell-ci/test/cnxk-tests/fwd_perf/: cnxk_fwd_gen.sh  cnxk_fwd_perf.sh  meson.build
marvell-ci/test/cnxk-tests/fwd_perf/ref_numbers/: rclk2000_sclk1000.cn106.l2fwd  rclk2000_sclk1000.cn106.l3fwd  rclk2000_sclk1000.cn106.testpmd  rclk2200_sclk1000.cn106.l3fwd  rclk2200_sclk1100.cn96.l3fwd  rclk2500_sclk1000.cn106.l3fwd  rclk2500_sclk1100.cn106.testpmd
marvell-ci/test/cnxk-tests/gpio_test/: cnxk_gpio_test.sh
marvell-ci/test/cnxk-tests/hotplug_test/: cnxk_hotplug_test.sh
marvell-ci/test/cnxk-tests/hwpool/: hwpool.c  meson.build
marvell-ci/test/cnxk-tests/inline_ipsec_autotest/: inline_ipsec_autotest.sh
marvell-ci/test/cnxk-tests/ipsec_msns/: README  cnxk_ipsec_msns.sh  gentraffic.py  ipsec_msns.c  ipsec_msns.h  meson.build  pcap_gen.sh
marvell-ci/test/cnxk-tests/ipsec_perf/: cnxk_ipsec_perf.sh  cnxk_ipsec_perf_gen.sh  ep0_inline_protocol.cfg  ipsec_perf_host.sh  ipsec_perf_target.sh  meson.build
marvell-ci/test/cnxk-tests/ipsec_perf/ref_numbers/cn10k/: rclk2000_sclk1000.106xx.ip.inb  rclk2000_sclk1000.106xx.ip.outb  rclk2000_sclk1000.106xx.ip_ev.inb  rclk2000_sclk1000.106xx.ip_ev.outb  rclk2000_sclk1000.106xx.ip_ev_ss.inb  rclk2000_sclk1000.106xx.ip_ev_ss.outb  rclk2000_sclk1000.106xx.ip_p.inb  rclk2000_sclk1000.106xx.ip_p.outb  rclk2000_sclk1000.106xx.ip_p_ss.inb  rclk2000_sclk1000.106xx.ip_p_ss.outb  rclk2500_sclk1000.106xx.ip.inb  rclk2500_sclk1000.106xx.ip.outb  rclk2500_sclk1000.106xx.ip_ev.inb  rclk2500_sclk1000.106xx.ip_ev.outb  rclk2500_sclk1000.106xx.ip_ev_ss.inb  rclk2500_sclk1000.106xx.ip_ev_ss.outb  rclk2500_sclk1000.106xx.ip_p.inb  rclk2500_sclk1000.106xx.ip_p.outb  rclk2500_sclk1000.106xx.ip_p_ss.inb  rclk2500_sclk1000.106xx.ip_p_ss.outb  rclk2500_sclk1000.106xx.lc.inb  rclk2500_sclk1100.106xx.ip_p_ss.outb  rclk2500_sclk1100.106xx.lc.inb  rclk2500_sclk1100.106xx.lc.outb  rclk2500_sclk1100.106xx.lp.inb  rclk2500_sclk1100.106xx.lp.outb  rclk2500_sclk1100.106xx.lp_ev.inb  (+1 more)
marvell-ci/test/cnxk-tests/ipsec_reassembly_perf/: cnxk_ipsec_reassembly_perf.sh  meson.build
marvell-ci/test/cnxk-tests/ipsec_reassembly_perf/pcap/: enc_aes-cbc_sha1-hmac_reas_1410.pcap  enc_aes-cbc_sha1-hmac_reas_380.pcap  enc_aes-cbc_sha1-hmac_reas_64.pcap  enc_aes-gcm_reas_1410.pcap  enc_aes-gcm_reas_380.pcap  enc_aes-gcm_reas_64.pcap
marvell-ci/test/cnxk-tests/ipsec_secgw/: cnxk_ipsec_loopback.sh
marvell-ci/test/cnxk-tests/l2fwd_event_pfc/: l2fwd_common.c  l2fwd_common.h  main.c  meson.build
marvell-ci/test/cnxk-tests/l2fwd_simple/: meson.build
marvell-ci/test/cnxk-tests/l2fwd_tmc/: l2fwd_common.c  l2fwd_event.c  main.c  meson.build
marvell-ci/test/cnxk-tests/l3fwd_non_eal/: meson.build
marvell-ci/test/cnxk-tests/mac_test/: cnxk_mac_test.sh  meson.build
marvell-ci/test/cnxk-tests/macsec_perf/: meson.build
marvell-ci/test/cnxk-tests/mbuf_perf/: meson.build
marvell-ci/test/cnxk-tests/mempool_perf/: cnxk_mempool_perf.sh  meson.build
marvell-ci/test/cnxk-tests/mempool_perf/ref_numbers/: cn96xx_rclk2200_sclk1100
marvell-ci/test/cnxk-tests/meter_test/: cnxk_mtr_test.sh
marvell-ci/test/cnxk-tests/multi_pool_pkt_tx/: meson.build  multi_pool_pkt_tx.c
marvell-ci/test/cnxk-tests/policer_test/: cnxk_ingress_policer.sh  meson.build
marvell-ci/test/cnxk-tests/port_ctrl/: meson.build
marvell-ci/test/cnxk-tests/ptp_test/: cnxk_ptp_test.sh
marvell-ci/test/cnxk-tests/rx_chksum/: meson.build
marvell-ci/test/cnxk-tests/sample/: meson.build
marvell-ci/test/cnxk-tests/tm_test/: cnxk_tm_test.sh  meson.build
marvell-ci/test/cnxk-tests/tx_chksum/: cnxk_tx_chksum.sh  meson.build
marvell-ci/test/cnxk-tests/txrx_stats/: cnxk_txrx_stats.sh
(+1156 files in other folders)
